--- a/Employee-Spring/EmployeeCRUD/EmployeeCRUD/pom.xml
+++ b/Employee-Spring/EmployeeCRUD/EmployeeCRUD/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>SpringBootCrud</artifactId>
+	<artifactId>EmployeeCRUD</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBootCrud</name>
-	<description>Demo project for Springboot crud operation using JDA</description>
+	<name>EmployeeCRUD</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -32,11 +32,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
@@ -49,7 +45,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
